--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Nitika Nadgar",
   "license": "ISC",
   "dependencies": {
+    "aphrodite": "^1.2.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
@@ -19,7 +20,10 @@
     "express": "^4.16.1",
     "file-loader": "^1.1.4",
     "react": "^16.0.0",
+    "react-animations": "^0.1.0",
     "react-dom": "^16.0.0",
+    "react-scrollable-anchor": "^0.5.0",
+    "react-scrollchor": "^4.0.0",
     "react-springy-parallax": "^1.1.0",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0"
